--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <div class="wrapper">
         <nav>
           <link rel="stylesheet" href="#"> <img src="assets/logo-dark.svg" alt="">
-
           <a href="#"><div class="blue-button">Get started</div></a>
         </nav>
       </div>
@@ -21,20 +20,23 @@
       <div class="wrapper">
          <div class="hero-section">
           <div class="hero-content">
-            <h1 class="hero-tittle" >Maximize skill,
+            <h1 class="hero-tittle" >Maximize skill,<br>
               minimize budget</h1>
-              <p class="hero-description">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+              <p class="hero-description">Our modern courses across a range of in-demand <br> skills will give you the knowledge you need to live the life you want.</p>
+              <button class="hero-buttton">Get started</button>
           </div>
-          <button class="hero-buttton">Get started</button>
+          
+
+          <figure class="hero-image">
+            <picture>
+             <source media="(min-width: 1024px)" srcset="assets/image-hero-desktop.webp">
+             <source media="(min-width: 1024px)" srcset="assets/image-hero-tablet.webp">
+             <img src="assets/image-hero-mobile.webp" alt="">
+            </picture>
+           </figure>
          </div>
 
-         <figure class="hero-image">
-          <picture>
-           <source media="(min-width: 1024px)" srcset="assets/image-hero-desktop.webp">
-           <source media="(min-width: 1024px)" srcset="assets/image-hero-tablet.webp">
-           <img src="assets/image-hero-mobile.webp" alt="">
-          </picture>
-         </figure>
+         
       </div>
     </main>
 </body>
