--- a/index.html
+++ b/index.html
@@ -4,40 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>skilled landing page</title>
+  <title>skilled e learinig platform</title>
 </head>
 <body>
-    <header>
-      <div class="wrapper">
-        <nav>
-          <link rel="stylesheet" href="#"> <img src="assets/logo-dark.svg" alt="">
-          <a href="#"><div class="blue-button">Get started</div></a>
-        </nav>
-      </div>
-    </header>
-
-    <main>
-      <div class="wrapper">
-         <div class="hero-section">
-          <div class="hero-content">
-            <h1 class="hero-tittle" >Maximize skill,<br>
-              minimize budget</h1>
-              <p class="hero-description">Our modern courses across a range of in-demand <br> skills will give you the knowledge you need to live the life you want.</p>
-              <button class="hero-buttton">Get started</button>
-          </div>
-          
-
-          <figure class="hero-image">
-            <picture>
-             <source media="(min-width: 1024px)" srcset="assets/image-hero-desktop.webp">
-             <source media="(min-width: 1024px)" srcset="assets/image-hero-tablet.webp">
-             <img src="assets/image-hero-mobile.webp" alt="">
-            </picture>
-           </figure>
-         </div>
-
-         
-      </div>
-    </main>
+  <h1>test</h1>
 </body>
 </html>
