--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>skilled e learinig platform</title>
 </head>
 <body>
-  <h1>test</h1>
+  <div class="overflow-wrapper">
+  <div class="container">
+    <h1>fish</h1>
+  </div>
+  </div>
 </body>
 </html>
