--- a/index.html
+++ b/index.html
@@ -9,7 +9,47 @@
 <body>
   <div class="overflow-wrapper">
   <div class="container">
-    <h1>fish</h1>
+    <nav>
+      <div class="container">
+        <ul class="top-nav">
+          <li>
+            <a href="#">
+              <img src="assets/logo-dark.svg" alt="">
+            </a>
+          </li>
+
+          <li>
+            <a href="#">
+              <button class="dark-btn">
+                Get Started
+              </button>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <section id="hero-section">
+      <div class="container">
+        <div class="hero-content">
+          <div class="hero-text">
+            <h1>Maximize skill,
+              minimize budget</h1>
+              <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+              <a href="#"><button class="hero-btn">
+                Get Started
+              </button></a>
+          </div>
+
+          <div class="hero-desktop-img">
+            <img src="assets/image-hero-desktop.webp" alt="hero desktop image">
+          </div>
+          <div class="hero-tablet-img">
+            <img src="assets/image-hero-tablet.webp" alt="hero tablet image">
+          </div>
+        </div>
+      </div>
+    </section>
   </div>
   </div>
 </body>
