--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
           <div class="hero-tablet-img">
             <img src="assets/image-hero-tablet.webp" alt="hero tablet image">
           </div>
+          <div class="hero-mobile-img">
+            <img src="assets/image-hero-mobile.webp" alt="hero mobile image">
+          </div>
         </div>
       </div>
     </section>
