--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
         </div>
       </div>
     </section>
+
+    <section id="popular-courses">
+      <div class="container">
+        <div class="courses-content-container">
+          
+        </div>
+      </div>
+    </section>
   </div>
   </div>
 </body>
