--- a/index.html
+++ b/index.html
@@ -56,7 +56,21 @@
 
     <section id="popular-courses">
       <div class="container">
-        <div class="courses-content-container">
+        <div class="courses-contents">
+          <div class="course-box" id="colored-box">
+            <h2>Check out our most popular courses!</h2>
+          </div>
+
+          <div class="course-box">
+           <div class="course-box-icon">
+            <img src="assets/icon-animation.svg" alt="running">
+           </div>
+           <div class="course-box-text">
+            <h3>Animation</h3>
+            <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+           </div>
+          </div>
+
           
         </div>
       </div>
