--- a/index.html
+++ b/index.html
@@ -68,8 +68,53 @@
            <div class="course-box-text">
             <h3>Animation</h3>
             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+            <a class="course-box-link" href="#">Get started</a>
            </div>
           </div>
+
+          <div class="course-box">
+            <div class="course-box-icon">
+             <img src="assets/icon-animation.svg" alt="running">
+            </div>
+            <div class="course-box-text">
+             <h3>Animation</h3>
+             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <a class="course-box-link" href="#">Get started</a>
+            </div>
+           </div>
+
+           <div class="course-box">
+            <div class="course-box-icon">
+             <img src="assets/icon-animation.svg" alt="running">
+            </div>
+            <div class="course-box-text">
+             <h3>Animation</h3>
+             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <a class="course-box-link" href="#">Get started</a>
+            </div>
+           </div>
+
+           <div class="course-box">
+            <div class="course-box-icon">
+             <img src="assets/icon-animation.svg" alt="running">
+            </div>
+            <div class="course-box-text">
+             <h3>Animation</h3>
+             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <a class="course-box-link" href="#">Get started</a>
+            </div>
+           </div>
+
+           <div class="course-box">
+            <div class="course-box-icon">
+             <img src="assets/icon-animation.svg" alt="running">
+            </div>
+            <div class="course-box-text">
+             <h3>Animation</h3>
+             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <a class="course-box-link" href="#">Get started</a>
+            </div>
+           </div>
 
           
         </div>
