--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="course-box-text">
              <h3>Animation</h3>
-             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <p>Create beautiful, usable interfaces to help shape the future of how the web looks..</p>
              <a class="course-box-link" href="#">Get started</a>
             </div>
            </div>
@@ -89,7 +89,7 @@
             </div>
             <div class="course-box-text">
              <h3>Animation</h3>
-             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <p>Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
              <a class="course-box-link" href="#">Get started</a>
             </div>
            </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="course-box-text">
              <h3>Animation</h3>
-             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <p>All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
              <a class="course-box-link" href="#">Get started</a>
             </div>
            </div>
@@ -111,7 +111,7 @@
             </div>
             <div class="course-box-text">
              <h3>Animation</h3>
-             <p>Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
+             <p>A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
              <a class="course-box-link" href="#">Get started</a>
             </div>
            </div>
